faster first preview (random average color)

--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 * Show singular value diagram
 * More images / quiz images / carousel
 * Compute compression ratio
+* mouseover to compare with original image
+* Explaining text
