--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 * Warn of long computation time when image is too big
-* Show singular value diagram
 * More images / quiz images / carousel
 * Explaining text
+* disable hover
